--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
-"Hello World" 
+<!DOCTYPE html>
+<html>
+<body>
+
+    <h2>Spring 2024 Info and Links</h2>
+
+    <h3>MATH 285</h3>
+    <h4>HW</h4>
+    <a href="https://us.prairielearn.com/pl/course_instance/147266/assessments">PraireLearn</a>
+
+    <h4>Question</h4>
+    <a href="https://campuswire.com/c/GE4D83E42/feed">CampusWire</a>
+
+    <h4>Info & Video </h4> 
+    <a href="https://canvas.illinois.edu/">Canvas</a>
+    
+    <h3>MATH 257</h3>
+    <h4>HW</h4>
+    <a href="https://us.prairielearn.com/pl/course_instance/145582/assessments">PraireLearn</a>
+
+    <h4>Question</h4>
+    <a href="https://campuswire.com/c/GE4D83E42/feed">CampusWire</a>
+
+    <h4>Info & Video </h4>
+    <a href="https://learn.illinois.edu/course/view.php?id=76529">Moodle</a>
+    
+    <h4>Online Lab</h4>
+    <a href="illinois.zoom.us">Zoom</a>
+
+    <h3>MATH 213</h3>
+    <h4> All </h4>
+    <a href="https://learn.illinois.edu/course/view.php?id=75914https://learn.illinois.edu/course/view.php?id=75914">Moodle</a>
+ 
+    <h4> Questions </h4>
+    <a href="piazza.com/illinois/spring2024/math213e1x1">Piazza</a>
+ 
+    <h3>ECE 220</h3>
+    <h4>Course Website</h4>
+    <a href="https://courses.grainger.illinois.edu/ece220/sp2024/">website</a>
+
+    <h4>HW</h4>
+    <a href="https://www.gradescope.com/courses/692259" >GradeScope</a> </a>
+
+    <h3>ECE 110</h3>
+
+    <h4>Course Website</h4>
+    <a href="https://canvas.illinois.edu/courses/42564" >Canvas</a> </a>
+
+    <h4>HW</h4>
+    <a href="https://www.gradescope.com/courses/691334" >GradeScope</a> </a>
+ 
+
+
+
+</body>
+</html>
