--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <a href="illinois.zoom.us">Zoom</a>
 
     <h3>MATH 213</h3>
-    <h4> All </h4>
+    <h4> Course Website </h4>
     <a href="https://learn.illinois.edu/course/view.php?id=75914https://learn.illinois.edu/course/view.php?id=75914">Moodle</a>
  
     <h4> Questions </h4>
