add prairietest and change color

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <body>
 
     <h2>Spring 2024 Info and Links</h2>
+    
+    <a href="https://us.prairietest.com/"> PrairieTest </a>
 
     <h3>MATH 285</h3>
     <h4>HW: </h4>
@@ -18,7 +20,7 @@
         CampusWire</a>
 
     <h4>Info & Video:</h4> 
-    <a href="https://canvas.illinois.edu/">
+    <a href="https://canvas.illinois.edu/courses/44060">
         Canvas</a>
     
     <h3>MATH 257</h3>
@@ -40,7 +42,7 @@
 
     <h3>MATH 213</h3>
     <h4> Course Website:</h4>
-    <a href="https://learn.illinois.edu/course/view.php?id=75914https://learn.illinois.edu/course/view.php?id=75914">
+    <a href="https://learn.illinois.edu/course/view.php?id=77090">
         Moodle</a>
  
     <h4>Questions:</h4>
