Added grade components

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <a href="https://canvas.illinois.edu/courses/44060">
         Canvas</a>
     
+    <p>Grade Components: PraireLearn HW + Quiz, Exams</p>
+
     <h3>MATH 257</h3>
     <h4>HW:</h4>
     <a href="https://us.prairielearn.com/pl/course_instance/145582/assessments">
@@ -40,6 +42,10 @@
     <a href="illinois.zoom.us">
         Zoom</a>
 
+    <p>Grade Components: Lab, Discussion, PraireLearn HW, exams</p>
+
+
+
     <h3>MATH 213</h3>
     <h4> Course Website:</h4>
     <a href="https://learn.illinois.edu/course/view.php?id=77090">
@@ -49,6 +55,9 @@
     <a href="piazza.com/illinois/spring2024/math213e1x1">
         Piazza</a>
  
+    <p>Grade Components: Moodle HW, Exams</p>
+
+
     <h3>ECE 220</h3>
     <h4>Course Website:</h4>
     <a href="https://courses.grainger.illinois.edu/ece220/sp2024/">
@@ -57,6 +66,9 @@
     <h4>HW:</h4>
     <a href="https://www.gradescope.com/courses/692259" >
         GradeScope</a> </a>
+
+    <p>Grade Components: PrairieTest Quiz, MP, Lab(extra credit), Exams</p>
+ 
 
     <h3>ECE 110</h3>
 
@@ -68,8 +80,9 @@
     <a href="https://www.gradescope.com/courses/691334" >
         GradeScope</a> </a>
  
+    <p>Grade Components: Homework(GradeScope), Lab(30%) Attendance(1%), Quiz, Exams</p>
 
-
+    
 
 </body>
 </html>
