Changed Mistake for ECE 110 Grade Component

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <a href="https://www.gradescope.com/courses/691334" >
         GradeScope</a> </a>
  
-    <p>Grade Components: Homework(GradeScope), Lab(30%) Attendance(1%), Quiz, Exams</p>
+    <p>Grade Components: Homework(GradeScope, PraireLearn), Lab(30%) Attendance(1%), Quiz, Exams</p>
 
     
 
