--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@
  
     <p>Grade Components: Homework(GradeScope, PraireLearn), Lab(30%) Attendance(1%), Quiz, Exams</p>
 
+    <h4>PHYS 213</h4>
+    <h4>Course Website:</h4>
+    <a href = "https://courses.physics.illinois.edu/phys213/sp2024/syllabus.html">Webpage</a>
+
+    <h4>Smart Physics</h4>
+    <a href = "https://smart.physics.illinois.edu/">Smart physics</a>
+
     
 
 </body>
