--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
     <h2>Spring 2025 Info and Links</h2>
 
     <div class="courses">  
+
+        <div class="course">
+            <h3>ECE 391</h3>
+            <button onclick="window.location.href='https://courses.grainger.illinois.edu/ece391/sp2025/'">
+            Course Website</button>
+        </div>
+
         <div class="course">
             <h3>ECE 313</h3>
             <button onclick="window.location.href='https://courses.grainger.illinois.edu/ece313/sp2025/'">
