Add gradescope links

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
             <h3>ECE 340</h3>
             <button onclick="window.location.href='https://courses.grainger.illinois.edu/ece340/sp2025/index.html'">
             Course Website</button>
+            <button onclick="window.location.href='https://www.gradescope.com/courses/958839'">
+            HW Gradescope</button>
+
             <p>Grade Components: Gradescope/Canvas Homework, Exams</p>
         </div>
 
@@ -44,6 +47,9 @@
             <h3>CS 374</h3>
             <button onclick="window.location.href='https://courses.grainger.illinois.edu/cs374al1/sp2025/'">
             Course Website</button>
+
+            <button onclick="window.location.href='https://www.gradescope.com/courses/941778'">
+            HW Gradescope</button>
             <p>Grade Components: PrarieLearn & Gradescope HW, Exams</p>
         </div>
 
@@ -58,6 +64,10 @@
             <h3>ECE 486</h3>
             <button onclick="window.location.href='https://courses.grainger.illinois.edu/ece486/sp2025/'">
             Course Website</button>
+            <button onclick="window.location.href='https://www.gradescope.com/courses/947869'">
+            HW Gradescope</button>
+            <button onclick="window.location.href='https://www.gradescope.com/courses/969657'">
+            Lab Gradescope</button>
             <p>Grade Components: GradeScope Homework, Lab, Exams </p>
         </div>
 
