Add office hour queues

--- a/index.html
+++ b/index.html
@@ -16,12 +16,27 @@
 
     <h2>Spring 2025 Info and Links</h2>
 
-    <div class="courses">  
+    <div class="courses"> 
+
+        <div class="course">
+            <h3> CARE </h3>
+            <button onclick="window.location.href='https://queue.illinois.edu/q/queue/834'">
+            CARE</button>
+        </div>
+        
+        <div class="course">
+            <h3>ECE 220</h3>
+            <button onclick="window.location.href='https://queue.illinois.edu/q/queue/998'">
+            Queue</button>
+        </div>
 
         <div class="course">
             <h3>ECE 391</h3>
             <button onclick="window.location.href='https://courses.grainger.illinois.edu/ece391/sp2025/'">
             Course Website</button>
+
+            <button onclick="window.location.href='https://queue.illinois.edu/q/queue/980'">
+            Queue</button>
         </div>
 
         <div class="course">
