Add most fall 2025 courses

--- a/index.html
+++ b/index.html
@@ -12,7 +12,43 @@
     <button onclick="window.location.href='https://us.prairielearn.com'">
     PraireLearn</button>
 
-    
+    <h2>Fall 2025 Info and Links</h2>
+
+    <div class="courses">
+        <div class="course">
+            <h3>ECE 444</h3>
+            <button onclick="window.location.href='https://fabweb.ece.illinois.edu/'">
+            Course Website</button>
+            <button onclick="window.location.href='https://canvas.illinois.edu/courses/62911'">
+            Canvas</button>
+        </div>
+
+        <div class="course">
+            <h3>ECE 490</h3>
+            <button onclick="window.location.href=''">
+            Course Website</button>
+            <button onclick="window.location.href=''">
+            Queue</button>
+        </div>
+
+        <div class="course">
+            <h3>ECE 405</h3>
+            <button onclick="window.location.href='https://canvas.illinois.edu/courses/62956'">
+            Canvas</button>
+        </div>
+
+        <div class="course">
+            <h3>CS 441</h3>
+            <button onclick="window.location.href='https://canvas.illinois.edu/courses/61117'">
+            Canvas</button>
+        </div>
+
+        <div class="course">
+            <h3>ECE 385</h3>
+            <button onclick="window.location.href='https://canvas.illinois.edu/courses/61663'">
+            Canvas</button>
+        </div>
+    </div>
 
     <h2>Spring 2025 Info and Links</h2>
 
