--- a/index.html
+++ b/index.html
@@ -25,10 +25,8 @@
 
         <div class="course">
             <h3>ECE 490</h3>
-            <button onclick="window.location.href=''">
+            <button onclick="window.location.href='https://courses.grainger.illinois.edu/ece490/fa2025/index.html'">
             Course Website</button>
-            <button onclick="window.location.href=''">
-            Queue</button>
         </div>
 
         <div class="course">
