--- a/index.html
+++ b/index.html
@@ -27,12 +27,18 @@
             <h3>ECE 490</h3>
             <button onclick="window.location.href='https://courses.grainger.illinois.edu/ece490/fa2025/index.html'">
             Course Website</button>
+            <button onclick="window.location.href='https://piazza.com/class/mehpfpjp9wc3wn'">
+            Piazza</button>
+            <button onclick="window.location.href='https://www.gradescope.com/courses/1088436'">
+            HW Gradescope</button>
         </div>
 
         <div class="course">
             <h3>ECE 405</h3>
             <button onclick="window.location.href='https://canvas.illinois.edu/courses/62956'">
             Canvas</button>
+            <button onclick="window.location.href='https://piazza.com/class/meqlvib5rzl2zs'">
+            Piazza</button>
         </div>
 
         <div class="course">
