add campuswire for cs441

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
             <h3>CS 441</h3>
             <button onclick="window.location.href='https://canvas.illinois.edu/courses/61117'">
             Canvas</button>
+            <button onclick="window.location.href='https://campuswire.com/c/GED989902/feed'">
+            Campuswire</button>
         </div>
 
         <div class="course">
