updated with better graphics and change button logic

--- a/index.html
+++ b/index.html
@@ -6,53 +6,40 @@
 
 
 <body>
-    <button onclick="window.location.href='https://www.gradescope.com'">
-    Gradescope </button>
-
-    <button onclick="window.location.href='https://us.prairielearn.com'">
-    PraireLearn</button>
+    <a href="https://www.gradescope.com" class="btn" target="_blank" rel="noopener">Gradescope</a>
+    <a href="https://us.prairielearn.com" class="btn" target="_blank" rel="noopener">PraireLearn</a>
 
     <h2>Fall 2025 Info and Links</h2>
 
     <div class="courses">
         <div class="course">
             <h3>ECE 444</h3>
-            <button onclick="window.location.href='https://fabweb.ece.illinois.edu/'">
-            Course Website</button>
-            <button onclick="window.location.href='https://canvas.illinois.edu/courses/62911'">
-            Canvas</button>
+            <a href="https://fabweb.ece.illinois.edu/" class="btn" target="_blank" rel="noopener">Course Website</a>
+            <a href="https://canvas.illinois.edu/courses/62911" class="btn" target="_blank" rel="noopener">Canvas</a>
         </div>
 
         <div class="course">
             <h3>ECE 490</h3>
-            <button onclick="window.location.href='https://courses.grainger.illinois.edu/ece490/fa2025/index.html'">
-            Course Website</button>
-            <button onclick="window.location.href='https://piazza.com/class/mehpfpjp9wc3wn'">
-            Piazza</button>
-            <button onclick="window.location.href='https://www.gradescope.com/courses/1088436'">
-            HW Gradescope</button>
+            <a href="https://courses.grainger.illinois.edu/ece490/fa2025/index.html" class="btn" target="_blank" rel="noopener">Course Website</a>
+            <a href="https://piazza.com/class/mehpfpjp9wc3wn" class="btn" target="_blank" rel="noopener">Piazza</a>
+            <a href="https://www.gradescope.com/courses/1088436" class="btn" target="_blank" rel="noopener">HW Gradescope</a>
         </div>
 
         <div class="course">
             <h3>ECE 405</h3>
-            <button onclick="window.location.href='https://canvas.illinois.edu/courses/62956'">
-            Canvas</button>
-            <button onclick="window.location.href='https://piazza.com/class/meqlvib5rzl2zs'">
-            Piazza</button>
+            <a href="https://canvas.illinois.edu/courses/62956" class="btn" target="_blank" rel="noopener">Canvas</a>
+            <a href="https://piazza.com/class/meqlvib5rzl2zs" class="btn" target="_blank" rel="noopener">Piazza</a>
         </div>
 
         <div class="course">
             <h3>CS 441</h3>
-            <button onclick="window.location.href='https://canvas.illinois.edu/courses/61117'">
-            Canvas</button>
-            <button onclick="window.location.href='https://campuswire.com/c/GED989902/feed'">
-            Campuswire</button>
+            <a href="https://canvas.illinois.edu/courses/61117" class="btn" target="_blank" rel="noopener">Canvas</a>
+            <a href="https://campuswire.com/c/GED989902/feed" class="btn" target="_blank" rel="noopener">Campuswire</a>
         </div>
 
         <div class="course">
             <h3>ECE 385</h3>
-            <button onclick="window.location.href='https://canvas.illinois.edu/courses/61663'">
-            Canvas</button>
+            <a href="https://canvas.illinois.edu/courses/61663" class="btn" target="_blank" rel="noopener">Canvas</a>
         </div>
     </div>
 
