more update with icon

--- a/index.html
+++ b/index.html
@@ -6,66 +6,110 @@
 
 
 <body>
-    <a href="https://www.gradescope.com" class="btn" target="_blank" rel="noopener">Gradescope</a>
-    <a href="https://us.prairielearn.com" class="btn" target="_blank" rel="noopener">PraireLearn</a>
+    <a href="https://www.gradescope.com" class="btn" target="_blank" rel="noopener">
+      <span class="icon gradescope-icon" aria-label="Gradescope">
+        <svg width="20" height="20" viewBox="0 0 20 20" fill="none"><circle cx="10" cy="10" r="10" fill="#1A9D49"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">G</text></svg>
+      </span>
+      Gradescope
+    </a>
+    <a href="https://us.prairielearn.com" class="btn" target="_blank" rel="noopener">
+      <span class="icon pl-icon" aria-label="PrairieLearn">
+        <svg width="20" height="20" viewBox="0 0 20 20" fill="none"><rect width="20" height="20" rx="5" fill="#F9B233"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">PL</text></svg>
+      </span>
+      PrairieLearn
+    </a>
 
     <h2>Fall 2025 Info and Links</h2>
 
     <div class="courses">
         <div class="course">
-            <h3>ECE 444</h3>
-            <a href="https://fabweb.ece.illinois.edu/" class="btn" target="_blank" rel="noopener">Course Website</a>
-            <a href="https://canvas.illinois.edu/courses/62911" class="btn" target="_blank" rel="noopener">Canvas</a>
+            <h3><span class="icon ece-icon" aria-label="Circuits"><svg width="20" height="20" viewBox="0 0 20 20"><circle cx="10" cy="10" r="10" fill="#0563c1"/><rect x="6" y="9" width="8" height="2" fill="#fff"/><circle cx="6" cy="10" r="2" fill="#fff"/></svg></span> ECE 444</h3>
+            <a href="https://fabweb.ece.illinois.edu/" class="btn" target="_blank" rel="noopener">
+              <span class="icon illinois-icon" aria-label="Illinois"><svg width="20" height="20" viewBox="0 0 20 20"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">I</text></svg></span>
+              Course Website
+            </a>
+            <a href="https://canvas.illinois.edu/courses/62911" class="btn" target="_blank" rel="noopener">
+              <span class="icon canvas-icon" aria-label="Canvas"><svg width="20" height="20" viewBox="0 0 20 20"><circle cx="10" cy="10" r="10" fill="#F47920"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">C</text></svg></span>
+              Canvas
+            </a>
         </div>
 
         <div class="course">
-            <h3>ECE 490</h3>
-            <a href="https://courses.grainger.illinois.edu/ece490/fa2025/index.html" class="btn" target="_blank" rel="noopener">Course Website</a>
-            <a href="https://piazza.com/class/mehpfpjp9wc3wn" class="btn" target="_blank" rel="noopener">Piazza</a>
-            <a href="https://www.gradescope.com/courses/1088436" class="btn" target="_blank" rel="noopener">HW Gradescope</a>
+            <h3><span class="icon chip-icon" aria-label="Microcontrollers"><svg width="20" height="20" viewBox="0 0 20 20"><rect width="20" height="20" rx="5" fill="#0563c1"/><rect x="6" y="6" width="8" height="8" fill="#fff"/><rect x="8" y="8" width="4" height="4" fill="#0563c1"/></svg></span> ECE 490</h3>
+            <a href="https://courses.grainger.illinois.edu/ece490/fa2025/index.html" class="btn" target="_blank" rel="noopener">
+              <span class="icon illinois-icon" aria-label="Illinois"><svg width="20" height="20" viewBox="0 0 20 20"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">I</text></svg></span>
+              Course Website
+            </a>
+            <a href="https://piazza.com/class/mehpfpjp9wc3wn" class="btn" target="_blank" rel="noopener">
+              <span class="icon piazza-icon" aria-label="Piazza"><svg width="20" height="20" viewBox="0 0 20 20"><circle cx="10" cy="10" r="10" fill="#00599C"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">P</text></svg></span>
+              Piazza
+            </a>
+            <a href="https://www.gradescope.com/courses/1088436" class="btn" target="_blank" rel="noopener">
+              <span class="icon gradescope-icon" aria-label="Gradescope"><svg width="20" height="20" viewBox="0 0 20 20" fill="none"><circle cx="10" cy="10" r="10" fill="#1A9D49"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">G</text></svg></span>
+              HW Gradescope
+            </a>
         </div>
 
         <div class="course">
-            <h3>ECE 405</h3>
-            <a href="https://canvas.illinois.edu/courses/62956" class="btn" target="_blank" rel="noopener">Canvas</a>
-            <a href="https://piazza.com/class/meqlvib5rzl2zs" class="btn" target="_blank" rel="noopener">Piazza</a>
+            <h3><span class="icon math-icon" aria-label="Math"><svg width="20" height="20" viewBox="0 0 20 20"><circle cx="10" cy="10" r="10" fill="#F47920"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="12" font-family="Arial" dy=".3em">Σ</text></svg></span> ECE 405</h3>
+            <a href="https://canvas.illinois.edu/courses/62956" class="btn" target="_blank" rel="noopener">
+              <span class="icon canvas-icon" aria-label="Canvas"><svg width="20" height="20" viewBox="0 0 20 20"><circle cx="10" cy="10" r="10" fill="#F47920"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">C</text></svg></span>
+              Canvas
+            </a>
+            <a href="https://piazza.com/class/meqlvib5rzl2zs" class="btn" target="_blank" rel="noopener">
+              <span class="icon piazza-icon" aria-label="Piazza"><svg width="20" height="20" viewBox="0 0 20 20"><circle cx="10" cy="10" r="10" fill="#00599C"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">P</text></svg></span>
+              Piazza
+            </a>
         </div>
 
         <div class="course">
-            <h3>CS 441</h3>
-            <a href="https://canvas.illinois.edu/courses/61117" class="btn" target="_blank" rel="noopener">Canvas</a>
-            <a href="https://campuswire.com/c/GED989902/feed" class="btn" target="_blank" rel="noopener">Campuswire</a>
+            <h3><span class="icon cs-icon" aria-label="Computer Science"><svg width="20" height="20" viewBox="0 0 20 20"><rect width="20" height="20" rx="5" fill="#0563c1"/><rect x="5" y="5" width="10" height="10" fill="#fff"/><rect x="8" y="8" width="4" height="4" fill="#0563c1"/></svg></span> CS 441</h3>
+            <a href="https://canvas.illinois.edu/courses/61117" class="btn" target="_blank" rel="noopener">
+              <span class="icon canvas-icon" aria-label="Canvas"><svg width="20" height="20" viewBox="0 0 20 20"><circle cx="10" cy="10" r="10" fill="#F47920"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">C</text></svg></span>
+              Canvas
+            </a>
+            <a href="https://campuswire.com/c/GED989902/feed" class="btn" target="_blank" rel="noopener">
+              <span class="icon campuswire-icon" aria-label="Campuswire"><svg width="20" height="20" viewBox="0 0 20 20"><rect width="20" height="20" rx="5" fill="#6C63FF"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">CW</text></svg></span>
+              Campuswire
+            </a>
         </div>
 
         <div class="course">
-            <h3>ECE 385</h3>
-            <a href="https://canvas.illinois.edu/courses/61663" class="btn" target="_blank" rel="noopener">Canvas</a>
+            <h3><span class="icon chip-icon" aria-label="Microcontrollers"><svg width="20" height="20" viewBox="0 0 20 20"><rect width="20" height="20" rx="5" fill="#0563c1"/><rect x="6" y="6" width="8" height="8" fill="#fff"/><rect x="8" y="8" width="4" height="4" fill="#0563c1"/></svg></span> ECE 385</h3>
+            <a href="https://canvas.illinois.edu/courses/61663" class="btn" target="_blank" rel="noopener">
+              <span class="icon canvas-icon" aria-label="Canvas"><svg width="20" height="20" viewBox="0 0 20 20"><circle cx="10" cy="10" r="10" fill="#F47920"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">C</text></svg></span>
+              Canvas
+            </a>
         </div>
     </div>
 
     <h2>Spring 2025 Info and Links</h2>
 
     <div class="courses"> 
-
         <div class="course">
-            <h3> CARE </h3>
-            <button onclick="window.location.href='https://queue.illinois.edu/q/queue/834'">
-            CARE</button>
+            <h3><span class="icon support-icon" aria-label="Support"><svg width="20" height="20" viewBox="0 0 20 20"><circle cx="10" cy="10" r="10" fill="#F47920"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="12" font-family="Arial" dy=".3em">?</text></svg></span> CARE </h3>
+            <a href="https://queue.illinois.edu/q/queue/834" class="btn" target="_blank" rel="noopener">
+              <span class="icon queue-icon" aria-label="Queue"><svg width="20" height="20" viewBox="0 0 20 20"><rect width="20" height="20" rx="5" fill="#0563c1"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">Q</text></svg></span>
+              CARE
+            </a>
         </div>
-        
         <div class="course">
-            <h3>ECE 220</h3>
-            <button onclick="window.location.href='https://queue.illinois.edu/q/queue/998'">
-            Queue</button>
+            <h3><span class="icon chip-icon" aria-label="Microcontrollers"><svg width="20" height="20" viewBox="0 0 20 20"><rect width="20" height="20" rx="5" fill="#0563c1"/><rect x="6" y="6" width="8" height="8" fill="#fff"/><rect x="8" y="8" width="4" height="4" fill="#0563c1"/></svg></span> ECE 220</h3>
+            <a href="https://queue.illinois.edu/q/queue/998" class="btn" target="_blank" rel="noopener">
+              <span class="icon queue-icon" aria-label="Queue"><svg width="20" height="20" viewBox="0 0 20 20"><rect width="20" height="20" rx="5" fill="#0563c1"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">Q</text></svg></span>
+              Queue
+            </a>
         </div>
-
         <div class="course">
-            <h3>ECE 391</h3>
-            <button onclick="window.location.href='https://courses.grainger.illinois.edu/ece391/sp2025/'">
-            Course Website</button>
-
-            <button onclick="window.location.href='https://queue.illinois.edu/q/queue/980'">
-            Queue</button>
+            <h3><span class="icon chip-icon" aria-label="Microcontrollers"><svg width="20" height="20" viewBox="0 0 20 20"><rect width="20" height="20" rx="5" fill="#0563c1"/><rect x="6" y="6" width="8" height="8" fill="#fff"/><rect x="8" y="8" width="4" height="4" fill="#0563c1"/></svg></span> ECE 391</h3>
+            <a href="https://courses.grainger.illinois.edu/ece391/sp2025/" class="btn" target="_blank" rel="noopener">
+              <span class="icon illinois-icon" aria-label="Illinois"><svg width="20" height="20" viewBox="0 0 20 20"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">I</text></svg></span>
+              Course Website
+            </a>
+            <a href="https://queue.illinois.edu/q/queue/980" class="btn" target="_blank" rel="noopener">
+              <span class="icon queue-icon" aria-label="Queue"><svg width="20" height="20" viewBox="0 0 20 20"><rect width="20" height="20" rx="5" fill="#0563c1"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">Q</text></svg></span>
+              Queue
+            </a>
         </div>
 
         <div class="course">
