add cs441 website

--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
               <span class="icon canvas-icon" aria-label="Canvas"><img src="logos/canvas.png" alt="Canvas Logo" class="platform-logo" onerror="this.style.display='none'" style="width:20px;height:20px;vertical-align:middle;"><svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><circle cx="10" cy="10" r="10" fill="#F47920"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">C</text></svg></span>
               Canvas
             </a>
+            <a href="https://courses.grainger.illinois.edu/cs441/fa2025/" class="btn" target="_blank" rel="noopener">
+              <span class="icon illinois-icon" aria-label="Illinois"><img src="logos/illinois.png" alt="Illinois Logo" class="platform-logo" onerror="this.style.display='none'" style="width:20px;height:20px;vertical-align:middle;"><svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#13294B"/><text x="50%" y="55%" text-anchor="middle" fill="#F47920" font-size="12" font-family="Arial" dy=".3em">I</text></svg></span>
+              Course Website
+            </a>
             <a href="https://campuswire.com/c/GED989902/feed" class="btn" target="_blank" rel="noopener">
               <span class="icon campuswire-icon" aria-label="Campuswire"><img src="logos/campuswire.png" alt="Campuswire Logo" class="platform-logo" onerror="this.style.display='none'" style="width:20px;height:20px;vertical-align:middle;"><svg width="20" height="20" viewBox="0 0 20 20" fill="none" style="vertical-align:middle;display:none;"><rect width="20" height="20" rx="5" fill="#6C63FF"/><text x="50%" y="55%" text-anchor="middle" fill="#fff" font-size="10" font-family="Arial" dy=".3em">CW</text></svg></span>
               Campuswire
